# lastmod

./: .gitignore  LICENSE.txt  README.md  lastmod.py  pyproject.toml  setup.cfg  setup.py
src/lastmod/: __init__.py  manager.py  utils.py
