[metadata]
name = lastmod
description = URI cache tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/josephl/lastmod
author = Joe Lee
project_urls =
    Source=https://github.com/josephl/lastmod
    Tracker=https://github.com/josephl/lastmod/issues

[options]
package_dir=
    =src
packages=find:
setup_requires =
    setuptools_scm
include_package_data = True

[options.packages.find]
where=src

[options.package_data]

[options.extras_require]
dev =
    pytest
